--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>projeto-01</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>projeto-01</title>
 </head>
+
 <body>
-  <img src="img/meuavatar.jpg" alt="avatar do Lucas" srcset="">
-  <p>EU sou Lucas_</p>  
-  <h1>Eu aprendo programação</h1>
-  <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos que já desenvolvi!</p>
-<p>minhas habilidades</p>
-<div>
-    <p>HTML</p>
-    <p>CSS</p>
-    <p>JavaScript</p>
-    <p>Scratch</p>
-</div>
+  <header class="container texto-center">
+    <img src="img/meuavatar.jpg" alt="avatar do Lucas" class="rounded-circle" width="150" height="150" srcset="">
+    <p class="lead">EU sou Lucas_</p>
+    <h1>Eu aprendo programação</h1>
+    <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino Fundamental e
+      Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos que já desenvolvi!
+    </p>
+    <p>minhas habilidades</p>
+    <div>
+      <p "class="badge bg-secondary>HTML</p>
+      <p "class="badge bg-secondary>CSS</p>
+      <p "class="badge bg-secondary>JavaScript</p>
+      <p "class="badge bg-secondary>Scratch</p>
+    </div>
+  </header>
 </body>
+
 </html>
