--- a/index.html
+++ b/index.html
@@ -17,16 +17,30 @@
     </p>
     <p>minhas habilidades são ser habilidoso e rápido</p>
     <div>
-      <p "class="badge bg-secondary>HTML</p>
-      <p "class="badge bg-secondary>CSS</p>
-      <p "class="badge bg-secondary>JavaScript</p>
-      <p "class="badge bg-secondary>Scratch</p>
+      <p class="badge bg-secondary">HTML</p>
+      <p class="badge bg-secondary">CSS</p>
+      <p class="badge bg-secondary">JavaScript</p>
+      <p class="badge bg-secondary">Scratch</p>
     </div>
   </header>
-  </main class="conteiner">
-  <h2>meus projetos</h2>
+  <main class="container">
+        <h2>Meus projetos</h2>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card" style="width: 18rem;">
+              <img src="img/meuavatar.jpg" class="card-img-top" alt="..."> -->
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+        </div>
 
-  </main>
+    </main>
+</body>
+
+</html>
 </body>
 
 </html>
